Style: Fixed header on smaller screens

--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -13,10 +13,14 @@
   height: 64px;
   margin-right: 12px;
 }
+.header__title{
+    font-size: 32px;
+}
 .header__beta {
   margin: 10px 0 0 12px;
   color: #faa356;
   padding: 0;
+  font-size: 24px;
 }
 
 .header__menu {
@@ -52,6 +56,16 @@
         padding: 0;
 
     }
+    .header__title{
+        font-size: 24px;
+    }
+    .header__logo {
+        width: 48px;
+        height: 48px;
+      }
+      .header__beta {
+        font-size: 16px;
+      }
     .header__container {
       display: none;
       flex-direction: column;
@@ -70,6 +84,7 @@
   
     .header__menu {
       display: block;
+      margin-left: 12px;
     }
   }
   
